examples/LINUX/tests/errors/function-name-reserved.biplan
// Function name uses reserved system function name.
// Compiler should notice it and return an error.

if()

stop


function if()
    print "Hello"
return 0
